--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Import Aptos font from Google Fonts if available */
-@import url('https://fonts.googleapis.com/css2?family=Aptos&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 /* Apply a universal box-sizing rule */
 *, *::before, *::after {
