--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 #welcome {
     padding: 20px;
-    text-align: left;
+    text-align: center;
 }
 
 #welcome h1 {
@@ -102,13 +102,13 @@ section {
 .profile-picture {
     flex-shrink: 0; /* Prevent the image from shrinking */
     height: auto; /* Height is auto to maintain aspect ratio */
-    width: 360px; /* Set the fixed width for the image */
+    width: 210px; /* Set the fixed width for the image */
     margin-right: 15px; /* Space between image and text */
 }
 
 .profile-text {
     flex-grow: 1;
-    max-width: 600px; /* Set the fixed width for the text */
+    max-width: 750px; /* Set the fixed width for the text */
     text-align: left; /* Align text to the left */
     word-wrap: break-word;
 }
