--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 #welcome {
     padding: 20px;
-    text-align: left;
+    text-align: center;
 }
 
 #welcome h1 {
@@ -80,7 +80,7 @@ section {
   margin: 0;
 }
 
-.introduction-box {
+.infobox {
     background-color: #f0f0f0; /* Light grey background */
     width: 960px;
     margin: 0 auto; /* Center the box */
