--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 20;
     line-height: 1.6;
     color: #333;
     background-color: #f3f3f3;
@@ -28,6 +28,10 @@ section {
     padding: 20;
     margin: 0;
     text-align: center;
+    color:#555;
+}
+
+.main-header h1 {
     color:#555;
 }
 
