Revert "Update style.css"
This reverts commit 6ba450fe0136cc0e034c227820daae708e22e4f4.

--- a/css/style.css
+++ b/css/style.css
@@ -178,14 +178,13 @@ section {
 #desktop-placeholder,
 #mobile-placeholder,
 #unity-canvas {
-    max-width: 960px;
-    padding-top: 62.5%;
+    width: 960px;
+    height: 600px;
     margin: 0 auto;
     background-color: #2a2a2a;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-sizing: border-box;
 }
 
 /*
