--- a/css/style.css
+++ b/css/style.css
@@ -213,13 +213,14 @@ section {
     #mobile-placeholder {
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         width: 100%;
         padding: 20px;
     }
 
     .profile-picture {
-        width: 100%;
-        margin-bottom: 15px;
+        width: 80%;
+        margin: 0 auto 10px;
         padding: 15;
     }
 
