--- a/css/style.css
+++ b/css/style.css
@@ -8,30 +8,26 @@
     box-sizing: border-box;
 }
 
+/* Style of generic body and section elements */
+
 body {
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    padding: 20;
+    margin: 0px;
+    padding: 20px;
     line-height: 1.6;
     color: #333;
     background-color: #f3f3f3;
 }
 
 section {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
-
-/* Style of the main header */
 
 .main-header {
-    padding: 20;
-    margin: 0;
+    padding: 20px;
+    margin: 0px;
     text-align: center;
-    color:#555;
-}
-
-.main-header h1 {
     color:#555;
 }
 
@@ -43,7 +39,7 @@ section {
 }
 
 #profile-section h1 {
-    margin: 0;
+    margin: 0px;
     color: #555;
 }
 
